tests/fixtures/multi_module/invalid/cycle/a.furqan
// D9/D20 G2 fixture. Two-module cycle: A -> B -> A.

bismillah A {
    authority: NAMING_MD
    serves: purpose_hierarchy.balance_for_living_systems
    scope: a_side
    not_scope: nothing_excluded
}

tanzil a_deps {
    depends_on: B
}
